fix(ui): tabs are not handle when the menu is collapsed

--- a/ui/src/styles/layout/element-plus-overload.scss
+++ b/ui/src/styles/layout/element-plus-overload.scss
@@ -400,11 +400,13 @@ form.ks-horizontal {
     &.top {
         background: var(--card-bg);
         border-bottom: 1px solid var(--bs-border-color);
-        margin: 0 calc(var(--spacer) * -1) var(--spacer);
+        margin: 0 calc(var(--spacer) * -1 + 1px) var(--spacer);
         padding: calc(var(--spacer) / 2);
 
         @include res(lg) {
-            margin: 0 calc(var(--spacer) * -4) var(--spacer);
+            main.menu-not-collapsed & {
+                margin: 0 calc(var(--spacer) * -4) var(--spacer);
+            }
         }
 
         .el-tabs__active-bar {
@@ -419,14 +421,18 @@ form.ks-horizontal {
             margin-bottom: 0;
         }
 
+        .el-tabs__nav-scroll {
+            padding: 0 15px;
+        }
+
         .el-tabs__nav-prev {
             &:after {
                 content: '';
                 position: absolute;
                 top: 0;
-                right: -15px;
+                right: -10px;
                 height: 100%;
-                width: 15px;
+                width: 10px;
                 background: linear-gradient(90deg, var(--card-bg) 0%, rgba(0, 0, 0, 0) 100%);
                 z-index: calc(var(--el-index-normal) + 2);
             }
